--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       }
     })();
   </script>
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="style.min.css">
 </head>
 
 <body>
